Add template control, ViewBag, Finish login,register,&logout

--- a/views/base.html
+++ b/views/base.html
@@ -15,9 +15,7 @@
 				<li>Categories</li>
 				<li>Popular</li>
 				<li>
-					<a href="/login">
-						Login
-					</a>
+					{{ template "account" . }}
 				</li>
 			</ul>
 		</nav>
