--- a/views/login.html
+++ b/views/login.html
@@ -1,8 +1,8 @@
 {{ define "content" }}
 <form id="login_form" action="/login" method="POST">
-	{{ if .PostBack.error }}
+	{{ if .error }}
 		<div class="error-container">
-			{{ .PostBack.error }}
+			{{ .error }}
 		</div>
 	{{ end }}
 	<div class="form-group">
@@ -10,7 +10,7 @@
 		<input type="email"
 			name="email"
 			id="email"
-			value="{{.PostBack.email}}"
+			value="{{.email}}"
 			/>
 	</div>
 	<div class="form-group">
