Setup watch event metric reporting on the video player page

--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,17 @@
 			<p>
 				{{.Description}}
 			</p>
+			<p>
+				{{.RuntimeDisplay}}
+			</p>
+			<p>
+				{{.MPARating}}
+			</p>
+			<p>
+				<a href="/v/{{.VideoId}}/">
+					<img src="/static/thumbnails/{{.VideoId}}" />
+				</a>
+			</p>
 		</div>
 	{{ end }}
 {{ end }}
