Drop trailing slashes from urls

--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
 				{{.MPARating}}
 			</p>
 			<p>
-				<a href="/v/{{.VideoId}}/">
+				<a href="/v/{{.VideoId}}">
 					<img src="/static/thumbnails/{{.VideoId}}" />
 				</a>
 			</p>
