--- a/views/watch.html
+++ b/views/watch.html
@@ -1,17 +1,19 @@
 {{ define "content" }}
 <div class="text-center" id="video-player">
-	<img src="/static/videos/{{.video.VideoId}}.webp" />
-</div>
-<span id="progress">0:00:00</span>
-/
-<span id="TotalRuntime">{{ .video.TotalRuntimeSeconds }}</span>
+	<img src="/static/videos/{{.video.VideoId}}.webp" id="video" />
+	<div id="video-controls">
+		<button id="pause"><i class="material-icons">pause</i></button>
+		<span id="progress">0:00:00</span>
+		/
+		<span id="TotalRuntime">{{ .video.TotalRuntimeSeconds }}</span>
 
-<div>
-	<input type="range" id="progress-slider" min="0" max="{{.video.TotalRuntimeSeconds}}" value="0" style="width: 80%;" />
+		<input type="range" id="progress-slider" min="0" max="{{.video.TotalRuntimeSeconds}}" value="0" style="width: 80%;" />
+	</div>
 </div>
 <script type="text/javascript">
 	var jsonData = JSON.parse({{ .jsonData }});
 </script>
 <script src="/static/js/watch.js"></script>
+<link rel="stylesheet" href="/static/css/watch.css" />
 
 {{ end }}
