--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -13,6 +13,11 @@ form {
 	padding: 2em;
 	border-radius: 0.3em;
 }
+form .error-container {
+	grid-column: 1/12;
+	color: red;
+	text-align:center;
+}
 form label {
 	padding: 0.4em;
 	color: black;
