Add in rating system and restructure the viewbag response relationship into a single struct

--- a/views/base.html
+++ b/views/base.html
@@ -20,7 +20,7 @@
 		<input type="text" id="search" placeholder="Search" autocomplete="off" autofocus role="searchbox" aria-controls="search-results" />
 		<ul id="search-results" class="hide" role="combobox"></ul>
 		<div id="account-section">
-			{{ template "account" . }}
+			{{ template "account" .user }}
 		</div>
 	</header>
 	<section>
