--- a/views/header/account.html
+++ b/views/header/account.html
@@ -1,6 +1,6 @@
 {{ define "account" }}
 	<a id="account-menu">
-		{{ .user.FullName }}
+		{{ .FullName }}
 	</a>
 	<div class="dropdown-menu hide">
 		<a href="/settings">
