--- a/views/watch.html
+++ b/views/watch.html
@@ -16,4 +16,6 @@
 <script src="/static/js/watch.js"></script>
 <link rel="stylesheet" href="/static/css/watch.css" />
 
+{{ template "rating" }}
+
 {{ end }}
