--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -1,3 +1,8 @@
+.movie-title {
+	color: #eee;
+	text-align: center;
+	font-size: 1.4em;
+}
 #video-player {
 	margin: 5em;
 }
@@ -52,9 +57,35 @@
 	width: 20px;
 	background-color: #ccc;
 }
-
 @media only screen and (max-width: 762px) {
 	#video-player {
 		margin: 0px;
 	}
+}
+
+.rating {
+	background-color: #444;
+	padding: 0px;
+	margin: 2em;
+	display: inline-flex;
+	align-self: end;
+}
+.rating a {
+	cursor: pointer;
+	font-size: 1.2em;
+	color: #ddd;
+	margin: 0px;
+	padding: 1.1em;
+	transition: background-color 0.5s;
+}
+.rating a:hover {
+	text-shadow: 0px 0px 8px #FFF6;
+	color: white;
+}
+.rating a:first-child {
+	border-right: 1px solid #222;
+}
+.rating a[active=true] {
+	background-color: #EEE;
+	color: #44E;
 }
