--- a/views/index.html
+++ b/views/index.html
@@ -28,4 +28,5 @@
 		{{ template "row" $list }}
 	{{ end }}
 	<script type="text/javascript" src="/static/js/index.js"></script>
+	<script type="text/javascript" src="/static/js/queue.js"></script>
 {{ end }}
