--- a/views/base.html
+++ b/views/base.html
@@ -5,9 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>ClemFlix</title>
 
+	<link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 	<link rel="stylesheet" href="/static/css/app.css" />
 	<link rel="stylesheet" href="/static/css/search.css" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 	<script src="/static/js/base.js"></script>
 	<script src="/static/js/search.js"></script>
