--- a/views/base.html
+++ b/views/base.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>ClemFlix</title>
 
-	<link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
 	<link rel="stylesheet" href="/static/css/app.css" />
 	<link rel="stylesheet" href="/static/css/search.css" />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
