Add video row for queud videos

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
 	{{ end }}
 	{{ if .backlog }}
 		<h3 class="row-title">
-			Queue
+			Saved for Later
 		</h3>
 		{{ template "row" .backlog }}
 	{{ end }}
