--- a/views/register.html
+++ b/views/register.html
@@ -14,26 +14,28 @@
 
 	<label for="fullname">Full Name:</label>
 	<input type="text"
-	name="fullname"
-	id="fullname"
-	value="{{.PostBack.fullname}}"
-	/>
+		name="fullname"
+		id="fullname"
+		value="{{.fullname}}"
+		/>
 	<label for="email">Email:</label>
 	<input type="email"
-	name="email"
-	id="email"
-	value="{{.PostBack.email}}"
-	/>
+		name="email"
+		id="email"
+		value="{{.email}}"
+		/>
 	<label for="password">Password:</label>
 	<input type="password"
-	name="password"
-	id="password"
-	/>
+		name="password"
+		id="password"
+		/>
 	<label for="password_confirmation">Confirm Password:</label>
 	<input type="password"
-	name="password_confirmation"
-	id="password_confirmation"
-	/>
+		name="password_confirmation"
+		id="password_confirmation"
+		/>
+
+	<p class="error-container hide" id="validate-msg"></p>
 
 	<div class="form-row">
 		<button type="submit" id="submit-button">
@@ -44,4 +46,5 @@
 		<a href="/login">Already have an account? Sign In</a>
 	</div>
 </form>
+<script src="/static/js/register.js"></script>
 {{ end }}
